--- a/public/mini-games/Abstracao/index.html
+++ b/public/mini-games/Abstracao/index.html
@@ -9,7 +9,7 @@
     <script src="../TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Abstracao.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/abstracao.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
