Feat(Correções texto): Correções do texto e adição de Fragment substituindo antigas divs quando possível

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" style="background-color: white">
   <head>
     <meta charset="utf-8" />
-    <title>Curso de formação em pensamento computacional</title>
+    <title>Curso de introdução em pensamento computacional</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
