Alterações e correções em imagens, textos e design

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Curso de introdução em pensamento computacional</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -23,6 +23,13 @@
     -->
   </head>
   <body>
+    <!--[if gte IE 9]
+      <style type="text/css">
+        .gradient {
+          filter: none;
+        }
+      </style>
+    <![endif]-->
     <div>
       <noscript>
         Para completa funcionalidade deste site é necessário habilitar o JavaScript.
