--- a/public/mini-games/Introducao/index.html
+++ b/public/mini-games/Introducao/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Conceitos Interativos</title>
-    <link rel="shortcut icon" href="../TemplateData/favicon.ico">
-    <link rel="stylesheet" href="../TemplateData/style.css">
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
     <script src="../TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -14,11 +14,10 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 920px; height: 540px;"></div>
+      <div id="gameContainer" style="width: 920px; height: 540px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Conceitos Interativos</div>
       </div>
     </div>
   </body>
